# agentOSX

./: .env.example  .gitignore  AGENTOS_INTEGRATION_QUICKREF.md  AGENT_MANIFEST_GUIDE.md  API_REFERENCE.md  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MIGRATION.md  QUICKREF.md  QUICKSTART.md  README.md  __init__.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  settings.py  test_setup.py  validate_release.py
agentosx/: __init__.py  health.py  py.typed
agentosx/agents/: __init__.py  base.py  decorators.py  lifecycle.py  loader.py  state.py
agentosx/cli/: __init__.py  main.py  utils.py
agentosx/cli/commands/: __init__.py  agent.py  deploy.py  dev.py  init.py  mcp.py  playground.py  run.py  test.py
agentosx/dev/: __init__.py  hot_reload.py  playground.py
agentosx/evaluation/: __init__.py  harness.py  metrics.py
agentosx/integrations/: __init__.py
agentosx/integrations/agentos/: __init__.py  client.py  deployment.py  events.py  sync.py
agentosx/marketplace/: __init__.py  installer.py  publisher.py  registry.py  versioning.py
agentosx/mcp/: __init__.py  client.py  protocol.py  server.py
agentosx/mcp/prompts/: __init__.py  manager.py  resolver.py
agentosx/mcp/resources/: __init__.py  manager.py  resolver.py
agentosx/mcp/tools/: __init__.py  adapter.py  executor.py  registry.py
agentosx/mcp/transport/: __init__.py  base.py  sse.py  stdio.py  websocket.py
agentosx/orchestration/: __init__.py  coordinator.py  crew.py  graph.py  handoff.py  message_bus.py
agentosx/sdk/: __init__.py  builder.py  types.py  utilities.py
agentosx/streaming/: __init__.py  events.py  formatters.py  sse.py  websocket.py
agentosx/tools/builtin/: __init__.py  agentos.py
agents/: __init__.py
agents/_template/: agent.py  agent.yaml
agents/blog_agent/: agent.yaml
agents/social_poster/: agent.py  persona.yaml
agents/twitter_agent/: agent.py  agent.yaml
core/: __init__.py
core/llm/: __init__.py  base.py  router.py
core/llm/providers/: __init__.py  anthropic.py  google_gemini.py  grok.py  ollama.py  openai.py  openrouter.py  together.py
core/memory/: memory.py
core/memory/stores/: chroma_store.py  inmem.py  sqlite.py
core/policy/: __init__.py  approvals.py  content_filters.py  rate_limits.py
core/tools/: __init__.py  registry.py  x_client.py
docs/: agent-development.md  architecture.md  getting-started.md  testing-guide.md
examples/: __init__.py  complete_example.py  mcp_server_example.py  orchestration_examples.py  social_post_demo.py
examples/quickstart/: mcp_server.py  simple_agent.py  streaming_chat.py
tests/: test_examples.py  test_integration.py
tests/fixtures/: conftest.py
tests/unit/: test_cli_utils.py
